# NeuroPress

./: .gitignore  .gitmodules  BUG_ANALYSIS.md  BUG_AUDIT.md  CMakeLists.txt  CUDA_MEMCPY_AUDIT.md  CompressionFactory.hpp  DECOMP_TIME_ADAPTATION_CONTEXT.md  ENGINEERING_REVIEW.md  FIX_PLAN.md  GPU_Compress.cpp  GPU_Compress.cu  OPTIMIZATION_REPORT.md  OVERVIEW.md  PLAN_LRU1_MANAGER_CACHE.md  README.md  SC_BENCHMARK_GAPS.md  SC_EVALUATION_PLAN.md  analyze_patternsANDentropy.py  codex_finding.md  commands.md  cursor_answer.md  deltaRunVPICParameters.md  explore_algo_patterns  forAIAgent.md  grayscott_benchmark_pm  gs.txt  gs_old.txt  minimal_nn_vol_profile  qtable_rl_implementation_plan.md  refactored-crunching-newt.md  roadMapToSC.md  visualize_entropy.py  visualize_patterns.py
.claude/agents/: sc-reviewer.md
.devcontainer/: Dockerfile  devcontainer.json
Engineering_Plan/: BYTE_SHUFFLE_API_REFERENCE.md  CUDA_SHUFFLE_IMPLEMENTATION_PLAN.md  GENERIC_SHUFFLE_CHANGES.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_ENHANCEMENTS_SUMMARY.md  QUICK_START_OPTIMIZED.md  SHUFFLE_IMPLEMENTATION_SUMMARY.md  SHUFFLE_OPTIMIZATION_GUIDE.md
NN-Accuracy-Adaptiveness/grayscott/: benchmark_grayscott_vol.cu  visualize_grayscott.py
NN-Accuracy-Adaptiveness/nn_adaptiveness/: benchmark_nn_adaptiveness.cu  data_generators.cuh  visualize_nn_adaptiveness.py
NN-Accuracy-Adaptiveness/vpic/: benchmark_vpic_sim.cxx  run_sim_benchmark.sh  visualize_chunk_mape.py  visualize_vpic_sim.py  vpicNNaccuracy.cxx
analysis/: plot_e2e.py  plot_trace.py
bench_tests/: ai_training.sh  lammps.sh  nyx.sh  vpic.sh  warpx.sh
benchmarks/: benchmark.sh  kendall_tau_profiler.cuh  overnight_vpic.sh  run_ai_paper.sh  run_all.sh  run_eval.sh  run_repeated.sh  visualize.py
benchmarks/diagnostic/: nn-diagnostic-benchmark.cu  visualize_diagnostic.py
benchmarks/grayscott/: grayscott-benchmark-pm.cu  grayscott-benchmark.cu  plot.sh  plot_lr_sweep.py  plot_timesteps.py  run_gs_eval.sh  run_gs_pm_eval.sh  sweep_lr.sh
benchmarks/lammps/: README.md  build_lammps_install.sh  run_lammps_benchmark.sh  run_lammps_vpic_benchmark.sh
benchmarks/nekrs/: run_nekrs_benchmark.sh
benchmarks/nyx/: README.md  build_nyx.sh  run_nyx_benchmark.sh
benchmarks/plots/: config.py  generate_dataset_figures.py  visualize_chunks.py
benchmarks/sdrbench/: generic-benchmark.cu  plot.sh  run_all_sdr.sh  run_cpu_zstd_baseline.sh  run_sdr_pm_eval.sh  run_sdrbench_eval.sh
benchmarks/slurm/: deltaai_1n4g.sh  deltaai_2n4g.sh  deltaai_4n4g.sh  deltaai_benchmark.sbatch
benchmarks/synthetic/: synthetic-nn-benchmark.cu
benchmarks/tests/: test_fix1_bufcache.sh  test_fix2_baseline.sh
benchmarks/vpic-kokkos/: VPIC_out.txt  (+15 more)
cmake/: CoreLibrary.cmake  HDF5Filter.cmake  HDF5Vol.cmake  Install.cmake  NyxIntegration.cmake  Tests.cmake  VpicIntegration.cmake
deploy/: gpucompress-build.yaml  run.sh  simulations.yaml
docker/: Dockerfile
docs/: P0_buffer_cache_fix.md  code_review_summary.md  commands.md  hdf5_integratio_qtable_adapt.md  hdf5_integration.md  pipeline_timing_analysis.md  quantization_tutorial.md  reproducability.md  vol_pipeline_overhead_analysis.md  vol_timing_correctness_audit.md
eval/: eval_simulation.cpp  reinforcement_audit.md
evaluations/: README.md
examples/: auto_compress.py  demo_gpu_pipeline.cu  grayscott_vol_demo.cu  hdf5_replay.cu  lammps_gpucompress_udf.cpp  nekrs_gpucompress_bridge.hpp  nekrs_gpucompress_udf.cpp  nekrs_gpucompress_udf.h  nn_vol_demo.cu  nyx_amrex_bridge.hpp  sample_gpu_compress_roundtrip.cu  vpic_compress_deck.cxx  vpic_kokkos_bridge.hpp
gpucompress_pkgs/: setup.py
include/: gpucompress.h  gpucompress_grayscott.h  gpucompress_hdf5.h  gpucompress_hdf5_vol.h  gpucompress_nekrs.h  gpucompress_nyx.h  gpucompress_vpic.h
neural_net/: ACTIVE_LEARNING.md  NN_DOCUMENTATION.md  NN_OVERVIEW.md  NN_TUTORIAL.md  PROPOSAL.md  binary_data.py  cv_eval.py  data.py  evaluate.py  export_weights.py  gpucompress_ctypes.py  inspect_weights.py  model.py  predict.py  retrain.py  simple_nn  simple_nn.cu  test_active_learning.cu  test_nn_cuda  test_nn_cuda.cu  train.py  xgb_predict.py  xgb_train.py
output/: run_ai_timing.sh
rl/: __init__.py  config.py  executor.py  export_qtable.py  generate_initial_qtable.py  policy.py  qtable.py  reward.py  trainer.py
rl_qtable/: config.py  executor.py  qtable.py  trainer.py
sc26_ad_ae/: sc26_ad_ae.tex
scripts/: benchmark.cpp  gen_synthetic.sh  generate_test_data.cu  gpucompress_hdf5.py  install_dependencies.sh  install_deps.sh  plot_cv_comparison.py  rebuild_vpic.sh  run_2n2g_test.sh  run_4n4g_all.sh  run_4n4g_lossless_balanced.sh  run_4n4g_lossless_ratio.sh  run_4n4g_lossy_balanced.sh  run_4n4g_lossy_ratio.sh  run_grayscott_eval.sh  run_rl_training.sh  run_simple_tests.sh  run_tests.sh  run_vpic_scaling.sh  smoke_4n4g.sh  smoke_4n4g_big.sh  smoke_test.sh  synthetic_data_generator  synthetic_data_generator.cc  test_all_algorithms.sh  test_quantization.sh  test_quantization_errors.sh  train_and_export_checkpoints.py  verify_compression.sh  visualize_benchmark.py  visualize_benchmarks.py  visualize_grayscott.py  visualize_results.py  visualize_vpic.py
src/: CompressionFactory.cpp  CompressionFactory.hpp  GPU_Compress.cpp  GPU_Decompress.cpp  byte_shuffle.cuh  byte_shuffle_kernels.cu  compression_header.h  quantization.cuh  quantization_kernels.cu  util.h
synthetic/: configs.hpp  generator.cu  generator.cuh  main.cu  quality.hpp
syntheticGeneration/: .gitignore  generator.py  requirements.txt
test_data/: compression_results.csv
tests/: benchmark_algo_sweep.cu  benchmark_gpu_resident.cu  benchmark_hdf5.c  benchmark_hdf5_viz.py  benchmark_vol_gpu.cu  experiment_128mb.cu  experiment_hdf5_128mb.c  experiment_hdf5_mixed.c  plot_gpu_resident.py  run_all_tests.sh  test_api.cu  test_cli.cu  test_cpu_stats.cu  test_ema_reset.sh  test_ema_reset_comprehensive.sh  test_nn.cu  test_nn_algo_convergence.cu  test_nn_pipeline.cpp  test_nn_reinforce.cpp  test_preprocessing.cu  test_shuffle.cu  test_shuffle_quant_effect.cu  test_stats.cu  test_vol_8mb.cu
(+296 files in other folders)
